--- a/frontend/.env
+++ b/frontend/.env
@@ -1,22 +1,22 @@
 # the name of the testnet
-VUE_APP_CHAIN=tomtest
+VUE_APP_CHAIN=enigma-testnet
 
 # Google reCaptcha site key
-VUE_APP_RECAPTCHA_SITE_KEY=<PUT CODE HERE>
+VUE_APP_RECAPTCHA_SITE_KEY=<PUT KEY HERE>
 
 # faucet backend url (/claim)
 # hostname and port should match FAUCET_PUBLIC_URL in ../backend/.env
 VUE_APP_CLAIM_URL=/claim
 
 # the name of the testnet
-FAUCET_CHAIN=tomtest
+FAUCET_CHAIN=enigma-testnet
 
 # Google reCaptcha secret key
-FAUCET_RECAPTCHA_SECRET_KEY=<PUT CODE HERE>
+FAUCET_RECAPTCHA_SECRET_KEY=<PUT KEY HERE>
 
 # faucet backend url
 # hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
-FAUCET_PUBLIC_URL=127.0.0.1:8001
+FAUCET_PUBLIC_URL=0.0.0.0:80
 
 # how much faucetToken to send
 FAUCET_AMOUNT_FAUCET=10uscrt
@@ -25,10 +25,10 @@ FAUCET_AMOUNT_FAUCET=10uscrt
 FAUCET_AMOUNT_STEAK=1uscrt
 
 # gaiacli account that holds the faucet funds
-FAUCET_KEY=a
+FAUCET_KEY=acc3
 
 # gaiacli account password
-FAUCET_PASS=123456789
+FAUCET_PASS=<PUT PASSWORD HERE>
 
 # full node that runs `gaiacli send`
-FAUCET_NODE=http://localhost:46657
+FAUCET_NODE=tcp://52.72.114.12:46657
