updated keys to test keys

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,7 +2,7 @@
 VUE_APP_CHAIN=enigma-testnet
 
 # Google reCaptcha site key
-VUE_APP_RECAPTCHA_SITE_KEY=<PUT KEY HERE>
+VUE_APP_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 
 # faucet backend url (/claim)
 # hostname and port should match FAUCET_PUBLIC_URL in ../backend/.env
@@ -12,7 +12,7 @@ VUE_APP_CLAIM_URL=/claim
 FAUCET_CHAIN=enigma-testnet
 
 # Google reCaptcha secret key
-FAUCET_RECAPTCHA_SECRET_KEY=<PUT KEY HERE>
+FAUCET_RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
 # faucet backend url
 # hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
