--- a/frontend/.env
+++ b/frontend/.env
@@ -25,10 +25,10 @@ FAUCET_AMOUNT_FAUCET=10uscrt
 FAUCET_AMOUNT_STEAK=1uscrt
 
 # gaiacli account that holds the faucet funds
-FAUCET_KEY=acc3
+FAUCET_KEY=<PUT PUBLIC KEY>
 
 # gaiacli account password
 FAUCET_PASS=<PUT PASSWORD HERE>
 
 # full node that runs `gaiacli send`
-FAUCET_NODE=tcp://52.72.114.12:46657
+FAUCET_NODE=tcp://52.72.114.12:26657
