--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,34 +13,39 @@
     "@nylira/vue-button": "^4.4.3",
     "@nylira/vue-field": "^1.5.0",
     "@nylira/vue-notifications": "^1.5.0",
-    "@tendermint/ui": "^0.2.6",
-    "axios": "^0.18.0",
+    "@tendermint/ui": "^0.5.0",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
     "bech32": "^1.1.3",
-    "moment": "^2.22.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.1",
+    "markdown-it": "^10.0.0",
+    "moment": "^2.24.0",
     "nib": "^1.1.2",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "vue": "^2.5.16",
-    "vue-analytics": "^5.12.2",
-    "vue-recaptcha": "^1.1.1",
-    "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
+    "vue-recaptcha": "^1.3.0",
+    "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/eslint-config-prettier": "^3.0.0-beta.15",
-    "@vue/test-utils": "^1.0.0-beta.16",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^22.4.3",
-    "lint-staged": "^6.0.0",
-    "stylus": "^0.54.5",
+    "babel-jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
