--- a/backend/.env
+++ b/backend/.env
@@ -1,24 +1,34 @@
-# the name of the testnet
-FAUCET_CHAIN=tomtest
+# the name of the testnet. should be same as chain-id
+VUE_APP_CHAIN=secret-testnet
+FAUCET_CHAIN=secret-testnet
 
-# Google reCaptcha secret key
-FAUCET_RECAPTCHA_SECRET_KEY=<PUT CODE HERE>
+# Google reCaptcha keys
+VUE_APP_RECAPTCHA_SITE_KEY=<captcha_key>
+FAUCET_RECAPTCHA_SECRET_KEY=<captcha_key>
+
+# faucet backend url (/claim)
+VUE_APP_CLAIM_URL=/claim
 
 # faucet backend url
-# hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
-FAUCET_PUBLIC_URL=127.0.0.1:8000
+FAUCET_PUBLIC_URL=:9000
 
 # how much faucetToken to send
-FAUCET_AMOUNT_FAUCET=10uscrt
+FAUCET_AMOUNT_FAUCET=<amount+denom e.g. 123uscrt>
 
-# how much steak to send
-FAUCET_AMOUNT_STEAK=1uscrt
+# DEPRECATED how much steak to send
+FAUCET_AMOUNT_STEAK=
 
-# gaiacli account that holds the faucet funds
-FAUCET_KEY=a
+# secretcli account that holds the faucet funds
+FAUCET_KEY=<acc_name>
 
-# gaiacli account password
-FAUCET_PASS=123456789
+# secretcli account password
+FAUCET_PASS=<not needed if using test backend>
 
-# full node that runs `gaiacli send`
-FAUCET_NODE=http://localhost:26657
+# full node that runs `enigmacli send`
+FAUCET_NODE=<fullnode addr e.g. tcp://domain.name:26657>
+
+# SSL cert paths
+FULLCHAIN_PEM_PATH=</path/to/cert.pem>
+PRIVKEY_PEM_PATH=</path/to/cert.pem>
+
+LOCAL_RUN=true
