--- a/frontend/.env
+++ b/frontend/.env
@@ -1,34 +1,34 @@
-# the name of the testnet
-VUE_APP_CHAIN=enigma-testnet
+# the name of the testnet. should be same as chain-id
+VUE_APP_CHAIN=secret-testnet
+FAUCET_CHAIN=secret-testnet
 
-# Google reCaptcha site key
-VUE_APP_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+# Google reCaptcha keys
+VUE_APP_RECAPTCHA_SITE_KEY=<captcha_key>
+FAUCET_RECAPTCHA_SECRET_KEY=<captcha_key>
 
 # faucet backend url (/claim)
-# hostname and port should match FAUCET_PUBLIC_URL in ../backend/.env
 VUE_APP_CLAIM_URL=/claim
 
-# the name of the testnet
-FAUCET_CHAIN=enigma-testnet
-
-# Google reCaptcha secret key
-FAUCET_RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
-
 # faucet backend url
-# hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
-FAUCET_PUBLIC_URL=0.0.0.0:80
+FAUCET_PUBLIC_URL=:9000
 
 # how much faucetToken to send
-FAUCET_AMOUNT_FAUCET=10uscrt
+FAUCET_AMOUNT_FAUCET=<amount+denom e.g. 123uscrt>
 
-# how much steak to send
-FAUCET_AMOUNT_STEAK=1uscrt
+# DEPRECATED how much steak to send
+FAUCET_AMOUNT_STEAK=
 
-# gaiacli account that holds the faucet funds
-FAUCET_KEY=<PUT PUBLIC KEY>
+# secretcli account that holds the faucet funds
+FAUCET_KEY=<acc_name>
 
-# gaiacli account password
-FAUCET_PASS=<PUT PASSWORD HERE>
+# secretcli account password
+FAUCET_PASS=<not needed if using test backend>
 
-# full node that runs `gaiacli send`
-FAUCET_NODE=tcp://52.72.114.12:26657
+# full node that runs `enigmacli send`
+FAUCET_NODE=<fullnode addr e.g. tcp://domain.name:26657>
+
+# SSL cert paths
+FULLCHAIN_PEM_PATH=</path/to/cert.pem>
+PRIVKEY_PEM_PATH=</path/to/cert.pem>
+
+LOCAL_RUN=true
