Makefile everything :sparkles:

--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ VUE_APP_CHAIN=secret-testnet
 FAUCET_CHAIN=secret-testnet
 
 # Google reCaptcha keys
-VUE_APP_RECAPTCHA_SITE_KEY=<captcha_key>
-FAUCET_RECAPTCHA_SECRET_KEY=<captcha_key>
+VUE_APP_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+FAUCET_RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
 # faucet backend url (/claim)
 VUE_APP_CLAIM_URL=/claim
